running composer update for facebook sdk

--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
         "laravelcollective/html": "~5.0",
         "tymon/jwt-auth": "0.5.*",
         "predis/predis": "~1.0",
-        "davibennun/laravel-push-notification": "dev-laravel5"
+        "davibennun/laravel-push-notification": "dev-laravel5",
+        "sammyk/laravel-facebook-sdk": "^3.0"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
