add fb id and secret id

--- a/.env
+++ b/.env
@@ -21,3 +21,6 @@ MAIL_PORT=2525
 MAIL_USERNAME=null
 MAIL_PASSWORD=null
 MAIL_ENCRYPTION=null
+
+FACEBOOK_APP_ID=562791523881937
+FACEBOOK_APP_SECRET=4fc7885dc314b57a90f1f8ea6b8f5e3e
